# scorpion-client

./: .gitignore  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
docs/: getting-started.md  index.md  reference.md
docs/reference/: models.md  plugins.md
docs/reference/data-source-plugins/: dimensions.md  matomo.md  nocodb.md  overview.md
docs/stylesheets/: extra.css
scorpion_client/: __init__.py  models.py  plugins.py
scorpion_client/data_sources/: dimensions.py  matomo.py  nocodb.py
