[tool.poetry]
name = "scorpion-client"
version = "0.1.0"
description = ""
authors = ["feserm <feser@ipk-gatersleben.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.8.2"
pluggy = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
